<resources>
    <string name="app_name">tartot</string>
    <string name="title_activity_first_log">Tartot</string>


    <!-- Strings related to MenuActivity -->
    <string name="text_view_first_log">Welcome to Tartot, what is your username?</string>
    <string name="edit_text_first_log">Enter a username (your default google username)</string>
    <string name="button_first_log">Open menu</string>
    <string name="text_view_google_log_in">You need to be connected to your google account to play</string>
    <string name="button_google_log_in">se connecter avec Google !</string>

    <!-- Strings related to MainMenuActivity -->
        <string name="text_view_title_main_menu">Avec Tartot, au tarot t\'y joueras tard ou tôt !</string>
        <string name="text_view_welcome_main_menu">Bienvenue </string>

        <!-- Strings related to login -->
        <string name="prompt_email">Email</string>
        <string name="prompt_password">Password (optional)</string>
        <string name="action_sign_in">Sign in or register</string>
        <string name="action_sign_in_short">Sign in</string>
        <string name="error_invalid_email">This email address is invalid</string>
        <string name="error_invalid_password">This password is too short</string>
        <string name="error_incorrect_password">This password is incorrect</string>
        <string name="error_field_required">This field is required</string>
        <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
        <string name="signin_other_error">unknown error during sign in.</string>
        <string name="app_id">491051549235</string>
        <string name="action_go_to_lobby">Go to lobby</string>
        <string name="invite_players">invite players</string>
        <string name="auto_match">auto match players</string>
        <string name="button_label_invitation_inbox">Invitations</string>
        <string name="displayWaitingRoom">display waiting room</string>
        <string name="player_number_tv">number of players in game for automatching</string>
        <string-array name="player_number">
            <item>2</item>
            <item>3</item>
            <item>4</item>
            <item>5</item>
        </string-array>

        <!-- Strings related to invitations -->
        <string name="accept_popup_invite">Accept!</string>
        <string name="inv_popup_text">Incoming invitation!</string>
        <string name="is_inviting_you">is inviting you</string>

    <!-- Strings related to GameActivity -->
        <!-- Strings related to Bid -->
        <string name="pass">Pass</string>
        <string name="small">Small</string>
        <string name="guard">Guard</string>
        <string name="guard_without">Guard Without</string>
        <string name="guard_against">Guard Against</string>

        <!-- Strings related to Announces -->
        <string name="simple_handful">simple handful</string>
        <string name="double_handful">double handful</string>
        <string name="triple_handful">triple handful</string>
        <string name="misery">misery</string>
        <string name="slam">slam</string>
        <string name="petit_au_bout">petit au bout</string>

        <!-- Strings related to playerLayout -->
        <string name="taker">T </string>
        <string name="king">K </string>

        <string name="validate_ecart">Validate your ecart</string>
        <string name="toast_ecart_begin">You should add </string>
        <string name="toast_ecart_end"> cards more</string>


</resources>